On rajoute des posts

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -7,3 +7,42 @@ navigation:
 
 De la haine ? Non, juste des pleurs !
 
+## Drag Show par le CROUS ? Chouin chouin sur X à droâte !
+
+::prose-blockquote
+C'est une honte de voir ce genre de soirée organisée dans notre université avec l'argent des étudiants. Au lieu d'aider ceux qui vivent dans une grande précarité, l'université et le Crous préfèrent financer et soutenir les shows de drag-queens.
+
+Une cocarde
+::
+
+::prose-blockquote
+Nouveau Drag Show cette fois-ci organisé directement par le @CrousBFC et @fc\_univ. L'argent des étudiants ne doit pas servir à financer ce genre d'événements idéologiquement biaisés.
+
+Une autre cocarde
+::
+
+::prose-blockquote
+Alors où est la fameuse "neutralité du service public" que soi-disant prônent les universités et les #CROUS ? Faites comme l'Université d'Angers, respectez vos principes et vos objectifs face aux réels besoins des étudiants qui galèrent et annulez votre soirée idéologique !
+
+Encore une autre cocarde (ils se sont donnés le mot je crois)
+::
+
+::prose-blockquote
+Les étudiants de @fc\_univ doivent être ravis de savoir que leurs cotisations CVEC servent à financer des spectacles de travelos et non pas à avoir de meilleures conditions d'études
+
+Un magicien
+::
+
+::prose-blockquote
+La décadence des universités françaises. L’argent des étudiants ne doit pas servir à financer ce genre d’événements mais à investir pour leurs avenirs.
+
+Un Républicain
+::
+
+::prose-blockquote
+À l'ensemble des étudiants de l'@univbourgogne, du mal pour obtenir du matériel scolaire ? De la peine à avoir cours dans des amphis délabrés ? Ne cherchez plus, l'argent de vos cotisations est là !
+
+Quelqu'un avec une fleur de lys en bio
+::
+
+Envie de rajouter un commentaire ? Envoyez le lien du post sur GitHub avec un commentaire [ici](https://github.com/AlxTNF/chouinchouin/issues) !
